# knowledge-retrieval-agent

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  deps.py  main.py  schemas.py
config/: settings.py
core/: __init__.py  exceptions.py  logging.py  metadata_db.py  metrics.py
docs/: RUNBOOK.md  getting_started.md
embeddings/: __init__.py  embedder.py  local_embeddings.py  upsert.py
ingestion/: __init__.py  loader.py  pipeline.py  splitter.py
monitoring/: grafana_dashboard.json
n8n/workflows/: doc_ingestion_workflow.json  query_routing_workflow.json
retrieval/: __init__.py  chain.py  llm.py  reranker.py  retriever.py
scripts/: benchmark_retrieval.py  seed_chroma.py  verify_pinecone.py
tests/: conftest.py
tests/eval/: evaluate_hallucination.py  rag_eval_dataset.json
tests/fixtures/sample_docs/: employee_handbook.txt  financial_report.md  it_security_policy.docx  refund_policy.md
tests/integration/: test_pipeline_chroma.py  test_retrieval_chain.py
tests/unit/: test_api.py  test_embedder.py  test_llm.py  test_loader.py  test_metadata_db.py  test_pipeline_unit.py  test_retrieval_components.py  test_splitter.py
